Add video and add strong tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Hållbarhet, Produktivitet & Lycka</title>
+		<title>Mina 5 viktigaste insikter om stress, energi & produktivitet</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link
 			href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
@@ -14,9 +14,9 @@
 	<body>
 		<!-- HEADER -->
 		<header class="header">
-			<h1 class="header__heading">Ta kontroll över stressen</h1>
+			<h1 class="header__heading">Mina fem viktigaste insikter</h1>
 			<h2 class="header__sub-heading">
-			- och ditt liv
+			- om stress, energi & produktivitet
 			</h2>
 			<div class="header__divider"></div>
 			<span class="header__subtext">Kostnadsfritt webbinarie</span>
@@ -27,6 +27,9 @@
 			<h1 class="heading__secondary">
 				Kompromissa inte med dina drömmar på grund av stress!
 			</h1>
+			<div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; margin: 0 auto; max-width:1000px">
+				<iframe src="https://www.youtube.com/embed/4pIqN0WSYjk?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+			</div>
 			<div class="introduction__content">
 				<div class="introduction__section">
 					<h2 class="heading__tertiary">
@@ -45,9 +48,9 @@
 				</div>
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
-					<p class="introduction__text">Alla dessa frågor och mycket mer tar jag upp i mitt webbinarie:</p>
+					<p class="introduction__text">Alla dessa frågor och mycket mer tar jag upp i webbinariet:</p>
 					<h3 class="heading__secondary">
-						Fem stora idéer om stress, energi och produktivitet som kommer förändra ditt liv för alltid
+						Mina fem viktigaste insikter om stress, energi och produktivitet
 					</h3>
 					<p class="introduction__text">
 						Det är helt gratis att delta men det finns bara ett begränsat antal platser. Se till att säkra din plats nu!
@@ -146,22 +149,22 @@
 				<h2 class="heading__secondary">På webbinariet kommer du att lära dig...</h2>
 						<ul class="webinar__list">
 						<li class="webinar__item">
-							De bästa verktygen för att minska din stress och återhämta dig effektivt.
+							De bästa verktygen för att <strong>minska din stress och återhämta dig effektivt.</strong>
 						</li>
 						<li class="webinar__item">
-							Hur du gör för att nå dina största mål i livet utan att kompromissa med dina drömmar på grund av stress.
+							Hur du gör för att <strong>nå dina största mål</strong> i livet utan att kompromissa med dina drömmar på grund av stress.
 						</li>
 						<li class="webinar__item">
-						Steg för steg hur du skapar maximal fokus och klarhet i ditt liv så att du kan sluta slösa din tid och energi på onödiga saker.
+						Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> i ditt liv så att du kan sluta slösa din tid och energi på onödiga saker.
 						</li>
 						<li class="webinar__item">
-							Hur du skapar bättre resultat än dina kollegor och konkurrenter trots dina problem med stress.
+							Hur du skapar <strong>bättre resultat än dina kollegor och konkurrenter</strong> trots dina problem med stress.
 						</li>
 						<li class="webinar__item">
-							Exakt hur du ska göra för att ta kontrollen över ditt liv och sluta känna dig som ett offer för omständigheterna.
+							Exakt hur du ska göra för att <strong>ta kontrollen över ditt liv</strong> och sluta känna dig som ett offer för omständigheterna.
 						</li>
 						<li class="webinar__item">
-							Hur du säkrar en trygg framtid för dig och din familj genom att skapa en rofylld vardag full av glädje och energi.
+							Hur du <strong>säkrar en trygg framtid</strong> för dig och din familj genom att skapa en rofylld vardag full av glädje och energi.
 						</li>
 						<li class="webinar__item">
 							...och mycket mer!
