remove video and video header

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 		<!-- INTRODUKTION -->
 		<section class="introduction">
-			<h1 class="heading__secondary">
+			<!-- <h1 class="heading__secondary">
 				Kompromissa inte med dina drömmar på grund av stress!
 			</h1>
 			<div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; margin: 0 auto; max-width:1000px">
 				<iframe src="https://www.youtube.com/embed/4pIqN0WSYjk?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-			</div>
+			</div> -->
 			<div class="introduction__content">
 				<div class="introduction__section">
 					<h2 class="heading__tertiary">
@@ -227,7 +227,7 @@
 						Det finns ganska få saker som egentligen är viktiga. Sluta ödsla energi på det som inte betyder något!
 					</li>
 					<li class="about">
-						Med ett tillräckligt stort varför du ska göra något kommer du hitta hur du ska göra det.
+						Med ett tillräckligt stort <strong>varför</strong> du ska göra något kommer du hitta <strong>hur</strong> du ska göra det.
 					</li>
 				</ul>
 			</div>
