--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Mina 5 viktigaste insikter om stress, energi & produktivitet</title>
+		<title>Hur du maximerar din tid, energi och produktivitet i ditt företag</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link
 			href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
@@ -14,9 +14,9 @@
 	<body>
 		<!-- HEADER -->
 		<header class="header">
-			<h1 class="header__heading">Mina fem viktigaste insikter</h1>
+			<h1 class="header__heading">Från anställd till företagare, utan stress</h1>
 			<h2 class="header__sub-heading">
-			- om stress, energi & produktivitet
+			 - Maximera din tid, energi & produktivitet
 			</h2>
 			<div class="header__divider"></div>
 			<span class="header__subtext">Kostnadsfritt webbinarie</span>
@@ -37,20 +37,20 @@
 					</h2>
 					<ul class="introduction__list">
 						<li class="introduction__item">
-							Är du trött på att aldrig ha tid eller energi till att göra de saker du vill göra?
+							Vill du starta företag eller har du redan startat ditt företag men du får aldrig tid och/eller energi att jobba på det?
 						</li>
 						<li class="introduction__item">
-							Vill du lära dig hur du tar till vara på energin som stressen ger dig utan att bli slutkörd på kvällen?
+							Är du trött på att vara stressad och slutkörd i en arbetssituation som du inte trivs med?
 						</li>
 						<li class="introduction__item">
-							Är du rädd för att du inte kommer nå dina mål eftersom du tappat tron på dig själv och din kropp?
+							Är du rädd för att du aldrig kommer kunna arbeta i ditt företag med det du brinner för, eftersom du tappat tron på dig själv och din hälsa?
 					</ul>
 				</div>
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
-					<p class="introduction__text">Alla dessa frågor och mycket mer tar jag upp i webbinariet:</p>
+					<p class="introduction__text">Jag kommer berätta hur du löser dessa problem och mycket mer i webbinariet:</p>
 					<h3 class="heading__secondary">
-						Mina fem viktigaste insikter om stress, energi och produktivitet
+						Från anställd till företagare, utan stress
 					</h3>
 					<p class="introduction__text">
 						Det är helt gratis att delta men det finns bara ett begränsat antal platser. Se till att säkra din plats nu!
@@ -62,10 +62,10 @@
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
 					<h2 class="heading__secondary">När?</h2>
-					<h3 class="heading__tertiary">Tisdag den 28 september klockan 18:00-19:30</h3>
+					<h3 class="heading__tertiary">Tisdag den 15 februari klockan 18:00-19:30</h3>
 					<p class="introduction__text">Webbinariet startar om...</p>
 					<div class="introduction__countdown">
-                    <img src="http://gen.sendtric.com/countdown/oos3fkfqw3" style="display: block; max-width: 100%;" />
+                    <img src="http://gen.sendtric.com/countdown/naxuwdu7go" style="display: block; max-width: 100%;" />
 				</div>
 				</div>
 			</div>
@@ -149,22 +149,22 @@
 				<h2 class="heading__secondary">På webbinariet kommer du att lära dig...</h2>
 						<ul class="webinar__list">
 						<li class="webinar__item">
+							Hur du <strong>får mer tid och energi över till ditt företag</strong>
+						</li>
+						<li class="webinar__item">
 							De bästa verktygen för att <strong>minska din stress och återhämta dig effektivt.</strong>
 						</li>
 						<li class="webinar__item">
 							Hur du gör för att <strong>nå dina största mål</strong> i livet utan att kompromissa med dina drömmar på grund av stress.
 						</li>
 						<li class="webinar__item">
-						Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> i ditt liv så att du kan sluta slösa din tid och energi på onödiga saker.
-						</li>
-						<li class="webinar__item">
-							Hur du skapar <strong>bättre resultat än dina kollegor och konkurrenter</strong> trots dina problem med stress.
+							Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> i ditt liv så att du kan sluta slösa din tid och energi på onödiga saker.
 						</li>
 						<li class="webinar__item">
 							Exakt hur du ska göra för att <strong>ta kontrollen över ditt liv</strong> och sluta känna dig som ett offer för omständigheterna.
 						</li>
 						<li class="webinar__item">
-							Hur du <strong>säkrar en trygg framtid</strong> för dig och din familj genom att skapa en rofylld vardag full av glädje och energi.
+							Hur du <strong>säkrar en trygg framtid</strong> för dig och din familj genom att bli en tillgång som du och dem kan lita på.
 						</li>
 						<li class="webinar__item">
 							...och mycket mer!
@@ -205,15 +205,15 @@
 					</p>
 					<p class="about__text">
 						Förut hindrade stressen, min dåliga självkänsla och min vilsenhet,
-						mig från att leva mitt drömliv. Nu vill jag bevisa för dig att du
-						inte behöver sitta fast i situtationen du är i. Om du låter mig visa
-						dig all den kraft och potential du har inom dig så kommer du snart
-						vara på god väg att nå dina mål.
+						mig från att leva mitt drömliv som företagare. Nu vill jag bevisa för dig att du
+						inte behöver sitta fast i den arbetssitutationen du är i. Om jag kan gå från utbränd
+						till 40 timmars arbetsvecka samtidigt som jag jobbar 10 - 20 timmar i 
+						veckan på mitt företag, så kan du absolut lära dig att få mer tid och energi till ditt företag!
 					</p>
 					<p class="about__text">
 						Jag älskar att utbilda och coacha mina kunder i hur de tar nästa
 						steg i sin personliga utveckling, det är min stora passion i livet.
-						Jag ser verkligen fram emot att ha med dig på kursen!
+						Jag ser verkligen fram emot att ha med dig på webbinariet!
 					</p>
 				</div>
 			</div>
@@ -235,7 +235,7 @@
 
 		<!-- FOOTER -->
 		<footer class="footer">
-			<p class="footer__copyright">&copy; 2021 Markus Mattsson</p>
+			<p class="footer__copyright">&copy; 2022 Markus Mattsson</p>
 			<div class="footer__divider"></div>
 			<p class="footer__copyright">
 				Development & Design by
