--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Hur du maximerar din tid, energi och produktivitet i ditt företag</title>
+		<title>Från anställd till företagare, utan stress</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link
 			href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
