--- a/index.html
+++ b/index.html
@@ -43,12 +43,16 @@
 							Är du trött på att vara stressad och slutkörd i en arbetssituation som du inte trivs med?
 						</li>
 						<li class="introduction__item">
-							Är du rädd för att du aldrig kommer kunna arbeta i ditt företag med det du brinner för, eftersom du tappat tron på dig själv och din hälsa?
+							Är du rädd för att du aldrig någonsin ska kunna säga upp dig och jobba på heltid med det du brinner för?
+						</li>
+						<li class="introduction__item">
+							När du väl får tid över till att utveckla ditt företag så sitter du med mobilen i soffan eller känner dig så överväldigad med allt som ska göras och gör ingenting!
+						</li>
 					</ul>
 				</div>
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
-					<p class="introduction__text">Jag kommer berätta hur du löser dessa problem och mycket mer i webbinariet:</p>
+					<p class="introduction__text">Jag kommer berätta hur du gör för att <strong>bli mer produktiv och få mer tid och energi till ditt företag</strong> så att du äntligen kan <strong>säga upp dig och jobba med det du brinner för!</strong> Allt du behöver göra är att <u>registrera dig till webbinariet:</u></p>
 					<h3 class="heading__secondary">
 						Från anställd till företagare, utan stress
 					</h3>
@@ -152,19 +156,19 @@
 							Hur du <strong>får mer tid och energi över till ditt företag</strong>
 						</li>
 						<li class="webinar__item">
-							De bästa verktygen för att <strong>minska din stress och återhämta dig effektivt.</strong>
+							Hur du gör för att <strong>få friheten att jobba med din passion</strong> fastän du inte har tid/energi. 
 						</li>
 						<li class="webinar__item">
-							Hur du gör för att <strong>nå dina största mål</strong> i livet utan att kompromissa med dina drömmar på grund av stress.
+							Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> så att du kan sluta slösa din extra tid och energi på jobbet, på att oroa sig och på att lösa andras problem, med mer.
 						</li>
 						<li class="webinar__item">
-							Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> i ditt liv så att du kan sluta slösa din tid och energi på onödiga saker.
+							Exakt hur du ska göra för att <strong>ta kontrollen över din tid och ditt liv</strong> och slutar känna att tiden (och livet) hela tiden flyter iväg på annat än det DU vill. 
 						</li>
 						<li class="webinar__item">
-							Exakt hur du ska göra för att <strong>ta kontrollen över ditt liv</strong> och sluta känna dig som ett offer för omständigheterna.
+							Hur du <strong>säkrar en trygg framtid för ditt företag</strong> igenom att bli konsekvent produktiv, vecka för vecka, vilket kommer garantera att ditt företag hela tiden växer. 
 						</li>
 						<li class="webinar__item">
-							Hur du <strong>säkrar en trygg framtid</strong> för dig och din familj genom att bli en tillgång som du och dem kan lita på.
+							Att fastställa varför du vill bli företagare. Om ditt varför är tillräckligt stort så finns det <strong>inget som kan stoppa dig från att nå din dröm!</strong>
 						</li>
 						<li class="webinar__item">
 							...och mycket mer!
@@ -212,7 +216,7 @@
 					</p>
 					<p class="about__text">
 						Jag älskar att utbilda och coacha mina kunder i hur de tar nästa
-						steg i sin personliga utveckling, det är min stora passion i livet.
+						steg i sitt företag och sitt liv, det är min stora passion i livet.
 						Jag ser verkligen fram emot att ha med dig på webbinariet!
 					</p>
 				</div>
@@ -224,12 +228,21 @@
 						Jobba inte hårdare, jobba smartare.
 					</li>
 					<li class="about">
-						Det finns ganska få saker som egentligen är viktiga. Sluta ödsla energi på det som inte betyder något!
+						Det finns ganska få saker som egentligen är viktiga. Sluta ödsla tid och energi på det som inte betyder något!
 					</li>
 					<li class="about">
 						Med ett tillräckligt stort <strong>varför</strong> du ska göra något kommer du hitta <strong>hur</strong> du ska göra det.
 					</li>
 				</ul>
+				<p class="about__text">
+						
+				</p>
+				<h2 class="heading__tertiary">
+					Så missa absolut inte detta! Anmäl dig nu så ses vi där!
+				</h2>	
+				<a href="#form">
+					<button class="btn btn__primary">Säkra din plats nu!</button>
+				</a>
 			</div>
 		</section>
 
