add phone number

--- a/index.html
+++ b/index.html
@@ -114,11 +114,16 @@
 													</div>
 													<div class="af-clear"></div>
 													</div>
-													<!-- <div class="af-element">
-															<label class="previewLabel" for="awf_field-110462362">Telefonnummer (frivilligt):</label>
-															<div class="af-textWrap"><input type="text" id="awf_field-110462362" class="text form__input" name="custom Phone Number" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="502" /></div>
+										<!-- 			<div class="af-element">
+															<label class="previewLabel" for="awf_field-113513209">Telefonnummer:</label>
+															<div class="af-textWrap"><input type="text" id="awf_field-113513209" class="text" name="custom Telefonnummer" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="502" /></div>
+														<div class="af-clear"></div>
+													</div> -->
+													<div class="af-element">
+															<label class="previewLabel" for="awf_field-113513209">Telefonnummer (frivilligt):</label>
+															<div class="af-textWrap"><input type="text" id="awf_field-113513209" class="text form__input" name="custom Telefonnummer" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="502" /></div>
 													<div class="af-clear"></div>
-											</div> -->
+											</div>
 									<div class="af-element buttonContainer">
 											<input name="submit" class="submit btn" type="submit" value="Säkra min plats" tabindex="503" />
 											<div class="af-clear"></div>
@@ -126,7 +131,9 @@
 									<div class="af-element tag" style="display:none;"><input id="awf_tag-112599883" type="hidden" name="tag_112599883" value="addwebinarfunnel" /></div>
 									<div class="af-element privacyPolicy" style="text-align: center">
 										<!-- <p>Vi respekterar din <a title="Privacy Policy" href="https://www.aweber.com/permission.htm" target="_blank" rel="nofollow">email privacy</a></p> -->
+											<p>Ditt telefonnummer kommer endast användas för att skicka påminnelser för webbinariet</p>
 											<p>Genom att sända in dina uppgifter godtar du också vår <a href="https://dothingsyourway.com/privacy-disclaimer/" target="_blank" rel="nofollow">integritetspolicy</a></p>
+
 										
 											<div class="af-clear"></div>
 									</div>
