--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<header class="header">
 			<h1 class="header__heading">Från anställd till företagare, utan stress</h1>
 			<h2 class="header__sub-heading">
-			 - Maximera din tid, energi & produktivitet
+			 - 5 steg för att maximera din tid, energi & produktivitet
 			</h2>
 			<div class="header__divider"></div>
 			<span class="header__subtext">Kostnadsfritt webbinarie</span>
@@ -52,7 +52,7 @@
 				</div>
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
-					<p class="introduction__text">Jag kommer berätta hur du gör för att <strong>bli mer produktiv och få mer tid och energi till ditt företag</strong> så att du äntligen kan <strong>säga upp dig och jobba med det du brinner för!</strong> Allt du behöver göra är att <u>registrera dig till webbinariet:</u></p>
+					<p class="introduction__text">Jag kommer gå igenom mina <strong>5 bästa steg för att optimera din tid, energi och produktivitet</strong> så att du äntligen kan säga upp dig och jobba med det du brinner för! Allt du behöver göra är att registrera dig till webbinariet:</p>
 					<h3 class="heading__secondary">
 						Från anställd till företagare, utan stress
 					</h3>
@@ -112,7 +112,7 @@
 															<label class="previewLabel" for="awf_field-113504802">Email:* </label>
 															<div class="af-textWrap"><input class="text form__input" id="awf_field-113504802" type="text" name="email" value="" tabindex="501" onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " required/>
 													</div>
-													<div class="af-clear"></div>
+														<div class="af-clear"></div>
 													</div>
 										<!-- 			<div class="af-element">
 															<label class="previewLabel" for="awf_field-113513209">Telefonnummer:</label>
@@ -120,10 +120,10 @@
 														<div class="af-clear"></div>
 													</div> -->
 													<div class="af-element">
-															<label class="previewLabel" for="awf_field-113513209">Telefonnummer (frivilligt):</label>
-															<div class="af-textWrap"><input type="text" id="awf_field-113513209" class="text form__input" name="custom Telefonnummer" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="502" /></div>
-													<div class="af-clear"></div>
-											</div>
+														<label class="previewLabel" for="awf_field-113513209">Telefonnummer (frivilligt):</label>
+														<div class="af-textWrap"><input type="text" id="awf_field-113513209" class="text form__input" name="custom Telefonnummer" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="502" /></div>
+														<div class="af-clear"></div>
+													</div>
 									<div class="af-element buttonContainer">
 											<input name="submit" class="submit btn" type="submit" value="Säkra min plats" tabindex="503" />
 											<div class="af-clear"></div>
