--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 			<div class="about__content">
 				<div class="about__section">
 					<img
-						src="assets/markus-and-matilda.jpeg"
+						src="assets/markus-bank.jpg"
 						alt="Ett fotografi av en man i 30-årsåldern med keps som håller armen runt en brunhårig kvinna med uppsatt hår och glasögon. I bakgrunden syns en fårhage."
 						class="about__image"
 					/>
