--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							Är du rädd för att du aldrig någonsin ska kunna säga upp dig och jobba på heltid med det du brinner för?
 						</li>
 						<li class="introduction__item">
-							När du väl får tid över till att utveckla ditt företag så sitter du med mobilen i soffan eller känner dig så överväldigad med allt som ska göras och gör ingenting!
+							När du väl får tid över till att utveckla ditt företag, hamnar du ofta med mobilen i soffan eller känner du dig så överväldigad med allt som ska göras så du gör ingenting?
 						</li>
 					</ul>
 				</div>
