--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
-					<p class="introduction__text">Jag kommer gå igenom mina <strong>5 bästa steg för att optimera din tid, energi och produktivitet</strong> så att du äntligen kan säga upp dig och jobba med det du brinner för! Allt du behöver göra är att registrera dig till webbinariet:</p>
+					<p class="introduction__text">Jag kommer gå igenom mina <strong>5 bästa steg för att maximera din tid, energi och produktivitet</strong> så att du äntligen kan säga upp dig och jobba med det du brinner för! Allt du behöver göra är att registrera dig till webbinariet:</p>
 					<h3 class="heading__secondary">
 						Från anställd till företagare, utan stress
 					</h3>
