--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
 		<!-- FOOTER -->
 		<footer class="footer">
-			<p class="footer__copyright">&copy; 2022 Markus Mattsson</p>
+			<p class="footer__copyright">&copy; 2022 Do Things Your Way | Markus Mattsson | SE900306053101 | Kaptensgatan 10E, 30245, Halmstad | 0738180343</p>
 			<div class="footer__divider"></div>
 			<p class="footer__copyright">
 				Development & Design by
