--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 			href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
 			rel="stylesheet"
 		/>
+		<!-- Meta Pixel Verification -->
+		<meta name="facebook-domain-verification" content="y0efspy4zb2knpoxdpw4c5y7ctfmey" />
+		<!-- End Meta Pixel Verification -->
+
 		<!-- Meta Pixel Code -->
 		<script>
 		!function(f,b,e,v,n,t,s)
