--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
 		src="https://www.facebook.com/tr?id=2556598284605991&ev=PageView&noscript=1"
 		/></noscript>
 		<!-- End Meta Pixel Code -->
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-NSH1HL7DW8"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-NSH1HL7DW8');
+		</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
 	</head>
 	<body>
 		<!-- HEADER -->
