--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
 					<h2 class="heading__secondary">När?</h2>
-					<h3 class="heading__tertiary">Torsdagen den 28 april klockan 18:00-19:30</h3>
+					<h3 class="heading__tertiary">Torsdagen den 5 Maj klockan 18:00-19:30</h3>
 					<p class="introduction__text">Webbinariet startar om...</p>
 					<div class="introduction__countdown">
-                    <img src="http://gen.sendtric.com/countdown/q14arloflo" style="display: block; max-width: 100%;" />
+                    <img src="http://gen.sendtric.com/countdown/91cvu92zax" style="display: block; max-width: 100%;" />
 				</div>
 				</div>
 			</div>
