--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
 		  gtag('config', 'G-NSH1HL7DW8');
 		</script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
+		
+		<!-- Global site tag (gtag.js) - Google Ads: 757437746 -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-757437746"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'AW-757437746');
+		</script>
 	</head>
 	<body>
 		<!-- HEADER -->
