--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 					</h2>
 					<ul class="introduction__list">
 						<li class="introduction__item">
-							Vill du starta företag eller har du redan startat ditt företag men du får aldrig tid och/eller energi att jobba på det?
+							Är du anställd idag och har startat upp ditt företag men du får aldrig tid och/eller energi att jobba på det?
 						</li>
 						<li class="introduction__item">
-							Är du trött på att vara stressad och slutkörd i en arbetssituation som du inte trivs med?
+							Är du trött på att vara stressad och slutkörd så att du aldrig hinner eller orka jobba mer i ditt företag?
 						</li>
 						<li class="introduction__item">
 							Är du rädd för att du aldrig någonsin ska kunna säga upp dig och jobba på heltid med det du brinner för?
@@ -110,10 +110,10 @@
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
 					<h2 class="heading__secondary">När?</h2>
-					<h3 class="heading__tertiary">Torsdagen den 19 Maj klockan 18:00-19:30</h3>
+					<h3 class="heading__tertiary">Tisdagen den 5 Juni klockan 18:00-19:30</h3>
 					<p class="introduction__text">Webbinariet startar om...</p>
 					<div class="introduction__countdown">
-                    <img src="http://gen.sendtric.com/countdown/2hnesxzo5s" style="display: block; max-width: 100%;" />
+                    <img src="http://gen.sendtric.com/countdown/ev7obio7j5" style="display: block; max-width: 100%;" />
 				</div>
 				</div>
 			</div>
