--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</h2>
 					<ul class="introduction__list">
 						<li class="introduction__item">
-							Är du anställd idag och har startat upp ditt företag men du får aldrig tid och/eller energi att jobba på det?
+							Är du anställd idag och har startat upp ditt företag och vill satsa på det?
 						</li>
 						<li class="introduction__item">
 							Är du trött på att vara stressad och slutkörd så att du aldrig hinner eller orka jobba mer i ditt företag?
@@ -210,7 +210,7 @@
 							Hur du gör för att <strong>få friheten att jobba med din passion</strong> fastän du inte har tid/energi. 
 						</li>
 						<li class="webinar__item">
-							Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> så att du kan sluta slösa din extra tid och energi på jobbet, på att oroa sig och på att lösa andras problem, med mer.
+							Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> så att du kan sluta slösa din extra tid och energi på att oroa dig eller känna dig otillräcklig.
 						</li>
 						<li class="webinar__item">
 							Exakt hur du ska göra för att <strong>ta kontrollen över din tid och ditt liv</strong> och slutar känna att tiden (och livet) hela tiden flyter iväg på annat än det DU vill. 
