--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</h2>
 					<ul class="introduction__list">
 						<li class="introduction__item">
-							Är du anställd idag och har startat upp ditt företag och vill satsa på det?
+							Är du anställd idag men du har redan startat upp ditt företag och vill satsa på det?
 						</li>
 						<li class="introduction__item">
 							Är du trött på att vara stressad och slutkörd så att du aldrig hinner eller orka jobba mer i ditt företag?
