--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
 									<form method="post" class="af-form-wrapper form__wrapper" accept-charset="UTF-8" action="https://www.aweber.com/scripts/addlead.pl"  >
 									<div style="display: none;">
 											<input type="hidden" name="meta_web_form_id" value="1526033656" />
-											<input type="hidden" name="meta_split_id" value="" />
 											<input type="hidden" name="listname" value="awlist6210556" />
-											<input type="hidden" name="redirect" value="https://dothingsyourway.com/thank-you/" id="redirect_b652ebe1b8c22406d07c50b0f6018841" />
+											<input type="hidden" name="redirect" value="https://dothingsyourway.aweb.page/p/fe8bd3f7-6f1b-4b5a-937c-bf24cbd03af3" id="redirect_b652ebe1b8c22406d07c50b0f6018841" />
 	
 											<input type="hidden" name="meta_adtracking" value="LP_webinarfunnel" />
 											<input type="hidden" name="meta_message" value="1" />
