update privacy policy

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 									<div class="af-element privacyPolicy" style="text-align: center">
 										<!-- <p>Vi respekterar din <a title="Privacy Policy" href="https://www.aweber.com/permission.htm" target="_blank" rel="nofollow">email privacy</a></p> -->
 											<p>Ditt telefonnummer kommer endast användas för att skicka påminnelser för webbinariet</p>
-											<p>Genom att sända in dina uppgifter godtar du också vår <a href="https://dothingsyourway.com/privacy-disclaimer/" target="_blank" rel="nofollow">integritetspolicy</a></p>
+											<p>Genom att sända in dina uppgifter godtar du också vår <a href="https://dothingsyourway.aweb.page/p/1bf92892-2cfd-4a5b-9b6a-01bcb46fc146" target="_blank" rel="nofollow">integritetspolicy</a></p>
 
 										
 											<div class="af-clear"></div>
