--- a/index.html
+++ b/index.html
@@ -126,73 +126,9 @@
 					Registrera dig nu!
 				</h2>
 				<section class="form__content">
-											<!-- Formulär -->
-	
-							<div class="form">
-									<!-- AWeber Web Form Generator 3.0.1 -->
-									<form method="post" class="af-form-wrapper form__wrapper" accept-charset="UTF-8" action="https://www.aweber.com/scripts/addlead.pl"  >
-									<div style="display: none;">
-											<input type="hidden" name="meta_web_form_id" value="1526033656" />
-											<input type="hidden" name="listname" value="awlist6210556" />
-											<input type="hidden" name="redirect" value="https://dothingsyourway.aweb.page/p/fe8bd3f7-6f1b-4b5a-937c-bf24cbd03af3" id="redirect_b652ebe1b8c22406d07c50b0f6018841" />
-	
-											<input type="hidden" name="meta_adtracking" value="LP_webinarfunnel" />
-											<input type="hidden" name="meta_message" value="1" />
-											<input type="hidden" name="meta_required" value="name,email" />
-	
-											<input type="hidden" name="meta_tooltip" value="" />
-									</div>
-									<div id="af-form-1526033656" class="af-form">
-											<div id="af-body-1526033656" class="af-body af-standards">
-													<div class="af-element">
-															<label class="previewLabel" for="awf_field-113504801">Förnamn:*</label>
-															<div class="af-textWrap">
-																	<input class="form__input" id="awf_field-113504801" type="text" name="name" class="text" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="500" required/>
-															</div>
-															<div class="af-clear"></div>
-													</div>
-													<div class="af-element">
-															<label class="previewLabel" for="awf_field-113504802">Email:* </label>
-															<div class="af-textWrap"><input class="text form__input" id="awf_field-113504802" type="text" name="email" value="" tabindex="501" onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " required/>
-													</div>
-														<div class="af-clear"></div>
-													</div>
-										<!-- 			<div class="af-element">
-															<label class="previewLabel" for="awf_field-113513209">Telefonnummer:</label>
-															<div class="af-textWrap"><input type="text" id="awf_field-113513209" class="text" name="custom Telefonnummer" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="502" /></div>
-														<div class="af-clear"></div>
-													</div> -->
-													<div class="af-element">
-														<label class="previewLabel" for="awf_field-113513209">Telefonnummer (frivilligt):</label>
-														<div class="af-textWrap"><input type="text" id="awf_field-113513209" class="text form__input" name="custom Telefonnummer" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="502" /></div>
-														<div class="af-clear"></div>
-													</div>
-									<div class="af-element buttonContainer">
-											<input name="submit" class="submit btn" type="submit" value="Säkra min plats" tabindex="503" />
-											<div class="af-clear"></div>
-									</div>
-									<div class="af-element tag" style="display:none;"><input id="awf_tag-112599883" type="hidden" name="tag_112599883" value="addwebinarfunnel" /></div>
-									<div class="af-element privacyPolicy" style="text-align: center">
-										<!-- <p>Vi respekterar din <a title="Privacy Policy" href="https://www.aweber.com/permission.htm" target="_blank" rel="nofollow">email privacy</a></p> -->
-											<p>Ditt telefonnummer kommer endast användas för att skicka påminnelser för webbinariet</p>
-											<p>Genom att sända in dina uppgifter godtar du också vår <a href="https://dothingsyourway.aweb.page/p/1bf92892-2cfd-4a5b-9b6a-01bcb46fc146" target="_blank" rel="nofollow">integritetspolicy</a></p>
-
-										
-											<div class="af-clear"></div>
-									</div>
-									<!-- <div class="af-element poweredBy" style="text-align: center; font-size: 9px;"><p><a href="https://www.aweber.com" title="AWeber Email Marketing" target="_blank" rel="nofollow">Powered by AWeber Email Marketing</a></p> -->
-									<div class="af-clear"></div>
-									</div>
-									</div>
-									<!-- <div id="af-footer-1526033656" class="af-footer"><div class="bodyText"><p>&nbsp;</p></div></div> -->
-									</div>
-									<div style="display: none;"><img src="https://forms.aweber.com/form/displays.htm?id=7JyMnIysHIxM" alt="" /></div>
-									</form>
-									<!-- /AWeber Web Form Generator 3.0.1 -->
-	
-							</div>
-	
-							<!-- Slut formulär -->
+					<groovemail-form-embed permalink="NjMwNjA2MTQ0MjUxODYxMjAyMWZiZmUy"></groovemail-form-embed><script src="https://app.groove.cm/groovemail/embed/app.js"></script>
+				</section>
+											
 			</header>
 			</div>
 		</section>
