--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
 			<div class="introduction__content">
 				<div class="introduction__section">
 					<h2 class="heading__tertiary">
-						Stämmer något av detta in på dig?
+						Stämmer detta in på dig?
 					</h2>
 					<ul class="introduction__list">
 						<li class="introduction__item">
-							Är du anställd idag men du har redan startat upp ditt företag och vill satsa på det?
+							Har du redan startat eller VET om att du ska starta eget företag?
 						</li>
 						<li class="introduction__item">
-							Är du trött på att vara stressad och slutkörd så att du aldrig hinner eller orka jobba mer i ditt företag?
+							Är du trött på att vara stressad och aldrig hinna jobba på ditt företag? 
 						</li>
 						<li class="introduction__item">
-							Är du rädd för att du aldrig någonsin ska kunna säga upp dig och jobba på heltid med det du brinner för?
+							Är du rädd för att du aldrig någonsin ska kunna säga upp dig och skapa ett liv du vill ha?
 						</li>
 						<li class="introduction__item">
 							När du väl får tid över till att utveckla ditt företag, hamnar du ofta med mobilen i soffan eller känner du dig så överväldigad med allt som ska göras så du gör ingenting?
@@ -110,7 +110,7 @@
 				<div class="introduction__divider"></div>
 				<div class="introduction__section">
 					<h2 class="heading__secondary">När?</h2>
-					<h3 class="heading__tertiary">Tisdagen den 6 September klockan 7:00-8:45</h3>
+					<h3 class="heading__tertiary">Tisdagen den 29 November klockan 18:00-19:45</h3>
 					<p class="introduction__text">Webbinariet startar om...</p>
 					<div class="introduction__countdown">
                     <img src="https://gen.sendtric.com/countdown/gaefm9quql" style="display: block; max-width: 100%;" />
