--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 		
 		<!-- HEADER -->
 		<header class="header">
-			<h1 class="header__heading">Från anställd till företagare, utan stress</h1>
-			<h2 class="header__sub-heading">
+			<h1 class="header__heading">5 vanliga misstag stressade överpresterare gör när de ska starta eget </h1>
+			<!-- <h2 class="header__sub-heading">
 			 - 5 steg för att maximera din tid, energi & produktivitet
-			</h2>
+			</h2> -->
 			<div class="header__divider"></div>
 			<span class="header__subtext">Kostnadsfritt webbinarie</span>
 		</header>
