--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 		
 		<!-- HEADER -->
 		<header class="header">
-			<h1 class="header__heading">5 vanliga misstag stressade överpresterare gör när de ska starta eget </h1>
-			<!-- <h2 class="header__sub-heading">
+			<h1 class="header__heading">Från anställd till företagare, utan stress</h1>
+			<h2 class="header__sub-heading">
 			 - 5 steg för att maximera din tid, energi & produktivitet
-			</h2> -->
+			</h2>
 			<div class="header__divider"></div>
 			<span class="header__subtext">Kostnadsfritt webbinarie</span>
 		</header>
@@ -145,16 +145,13 @@
 							Hur du gör för att <strong>få friheten att jobba med din passion</strong> fastän du inte har tid/energi. 
 						</li>
 						<li class="webinar__item">
-							Steg för steg hur du skapar <strong>maximal fokus och klarhet</strong> så att du kan sluta slösa din extra tid och energi på att oroa dig eller känna dig otillräcklig.
+							Steg för steg hur du slutar slösa din extra tid och energi på att <strong>oroa dig eller ha dåligt samvete för att du inte gör mer.</strong>
 						</li>
 						<li class="webinar__item">
 							Exakt hur du ska göra för att <strong>ta kontrollen över din tid och ditt liv</strong> och slutar känna att tiden (och livet) hela tiden flyter iväg på annat än det DU vill. 
 						</li>
 						<li class="webinar__item">
 							Hur du <strong>säkrar en trygg framtid för ditt företag</strong> igenom att bli konsekvent produktiv, vecka för vecka, vilket kommer garantera att ditt företag hela tiden växer. 
-						</li>
-						<li class="webinar__item">
-							Att fastställa varför du vill bli företagare. Om ditt varför är tillräckligt stort så finns det <strong>inget som kan stoppa dig från att nå din dröm!</strong>
 						</li>
 						<li class="webinar__item">
 							...och mycket mer!
@@ -175,8 +172,7 @@
 				<h1 class="heading__primary heading__primary--light">Om mig</h1>
 			</header>
 			<h2 class="heading__tertiary">
-				Hej, jag heter Markus Mattsson! 👋 <br />Min stora passion är att hjälpa människor att leva
-				det liv de alltid har drömt om.
+				Hej, jag heter Markus Mattsson! 👋 <br />Min stora passion är att hjälpa människor med stress och produktivitet så att de kan bygga ett företag de drömmer om.
 			</h2>
 			<div class="about__content">
 				<div class="about__section">
@@ -198,7 +194,7 @@
 						mig från att leva mitt drömliv som företagare. Nu vill jag bevisa för dig att du
 						inte behöver sitta fast i den arbetssitutationen du är i. Om jag kan gå från utbränd
 						till 40 timmars arbetsvecka samtidigt som jag jobbar 10 - 20 timmar i 
-						veckan på mitt företag, så kan du absolut lära dig att få mer tid och energi till ditt företag!
+						veckan på mitt företag, för att till sist säga upp mig, så kan du absolut lära dig att få mer tid och energi till ditt företag!
 					</p>
 					<p class="about__text">
 						Jag älskar att utbilda och coacha mina kunder i hur de tar nästa
@@ -217,7 +213,7 @@
 						Det finns ganska få saker som egentligen är viktiga. Sluta ödsla tid och energi på det som inte betyder något!
 					</li>
 					<li class="about">
-						Med ett tillräckligt stort <strong>varför</strong> du ska göra något kommer du hitta <strong>hur</strong> du ska göra det.
+						Med ett tillräckligt stort <strong>varför</strong> du ska göra något kommer du hitta <strong>hur</strong> du ska göra det. Det är därför du läser detta just nu!
 					</li>
 				</ul>
 				<p class="about__text">
