--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 					</h2>
 					<ul class="introduction__list">
 						<li class="introduction__item">
-							Har du redan startat eller VET om att du ska starta eget företag?
+							Har du redan startat eller <strong>vet</strong> om att du ska starta eget företag?
 						</li>
 						<li class="introduction__item">
-							Är du trött på att vara stressad och aldrig hinna jobba på ditt företag? 
+							Är du trött på att vara <strong>stressad</strong> och aldrig hinna jobba på ditt företag? 
 						</li>
 						<li class="introduction__item">
-							Är du rädd för att du aldrig någonsin ska kunna säga upp dig och skapa ett liv du vill ha?
+							Är du rädd för att du aldrig någonsin ska kunna säga upp dig och <strong>det liv du vill ha</strong>?
 						</li>
 						<li class="introduction__item">
-							När du väl får tid över till att utveckla ditt företag, hamnar du ofta med mobilen i soffan eller känner du dig så överväldigad med allt som ska göras så du gör ingenting?
+							När du väl får tid över till att utveckla ditt företag, hamnar du ofta med mobilen i soffan eller känner du dig så <strong>överväldigad</strong> med allt som ska göras så du gör ingenting?
 						</li>
 					</ul>
 				</div>
