--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Från anställd till företagare, utan stress</title>
+		<title>Hur stressade överpresterare snabbast startar eget företag</title>
 		<link rel="stylesheet" href="styles.css" />
 		<link
 			href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
@@ -58,7 +58,7 @@
 		
 		<!-- HEADER -->
 		<header class="header">
-			<h1 class="header__heading">Från anställd till företagare, utan stress</h1>
+			<h1 class="header__heading">Hur stressade överpresterare snabbast startar eget företag</h1>
 			<h2 class="header__sub-heading">
 			 - 5 steg för att maximera din tid, energi & produktivitet
 			</h2>
@@ -98,7 +98,7 @@
 				<div class="introduction__section">
 					<p class="introduction__text">Jag kommer gå igenom mina <strong>5 bästa steg för att maximera din tid, energi och produktivitet</strong> så att du äntligen kan säga upp dig och jobba med det du brinner för! Allt du behöver göra är att registrera dig till webbinariet:</p>
 					<h3 class="heading__secondary">
-						Från anställd till företagare, utan stress
+						Hur stressade överpresterare snabbast startar eget företag
 					</h3>
 					<p class="introduction__text">
 						Det är helt gratis att delta men det finns bara ett begränsat antal platser. Se till att säkra din plats nu!
