--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 				<h2 class="heading__secondary">På webbinariet kommer du att lära dig...</h2>
 						<ul class="webinar__list">
 						<li class="webinar__item">
-							Hur du <strong>får mer tid och energi över till ditt företag</strong>
+							<strong>Den nya revolutionerande forskningen</strong> om stress som förändrade mitt liv för alltid!
 						</li>
 						<li class="webinar__item">
-							Hur du gör för att <strong>få friheten att jobba med din passion</strong> fastän du inte har tid/energi. 
+							Hur du går från <strong>stressad överpresterare till välmående och effektiv</strong> samtidigt som du får ännu bättre resultat.
 						</li>
 						<li class="webinar__item">
 							Steg för steg hur du slutar slösa din extra tid och energi på att <strong>oroa dig eller ha dåligt samvete för att du inte gör mer.</strong>
