--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</h2>
 					<ul class="introduction__list">
 						<li class="introduction__item">
-							Har du redan startat eller <strong>vet</strong> om att du ska starta eget företag?
+							Har du redan startat eller <u>vet</u> om att du ska <strong>starta eget företag</strong>?
 						</li>
 						<li class="introduction__item">
 							Är du trött på att vara <strong>stressad</strong> och aldrig hinna jobba på ditt företag? 
