--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 		
 		<!-- HEADER -->
 		<header class="header">
-			<h1 class="header__heading">Hur stressade överpresterare snabbast startar eget företag</h1>
+			<h1 class="header__heading">Från stressad överpresterare till framgångsrik egenföretagare</h1>
 			<h2 class="header__sub-heading">
-			 - 5 steg för att maximera din tid, energi & produktivitet
+			 - 5 steg för att optimera din tid och energi
 			</h2>
 			<div class="header__divider"></div>
 			<span class="header__subtext">Kostnadsfritt webbinarie</span>
